--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -32,3 +32,9 @@ rules:
   functional/functional-parameters: 0
   functional/no-try-statement: 0
   functional/no-throw-statement: 0
+
+overrides:
+  - files: "*Slice.js"
+    rules:
+      no-param-reassign: 0
+
