--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.8.0",
     "cssnano": "^4.1.10",
+    "date-fns": "^2.17.0",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "faker": "^5.1.0",
@@ -46,7 +47,6 @@
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
-    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "point-of-view": "^4.7.0",
     "pug": "^3.0.0",
