--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@hexlet/code",
-  "version": "0.0.1",
-  "description": "",
+  "version": "1.0.0",
+  "description": "Hexlet chat like slack",
+  "keywords": [
+    "hexlet",
+    "chat",
+    "slack-chat",
+    "PavelDeuce"
+  ],
   "main": "server/index.js",
   "engines": {
     "node": ">= 14"
@@ -17,17 +23,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:hexlet-components/projects-frontend-l4-server.git"
+    "url": "git@github.com:PavelDeuce/frontend-project-lvl4.git"
   },
-  "author": "Kirill Mokevnin",
+  "author": "Pavel Deryugin (PavelDeuce)",
   "license": "ISC",
   "homepage": "",
   "dependencies": {
-    "@babel/cli": "^7.12.8",
-    "@babel/core": "^7.12.9",
-    "@babel/node": "^7.12.6",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
@@ -61,6 +62,11 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
