--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:PavelDeuce/frontend-project-lvl4.git"
+    "url": "git@github.com:PavelDeuce/chat-slack.git"
   },
   "author": "Pavel Deryugin (PavelDeuce)",
   "license": "ISC",
-  "homepage": "",
+  "homepage": "https://github.com/PavelDeuce/chat-slack#readme",
+  "bugs": {
+    "url": "https://github.com/PavelDeuce/chat-slack/issues"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.0",
