--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fastify-sensible": "^3.0.1",
     "fastify-static": "^3.3.0",
     "formik": "^2.2.5",
+    "i18next": "^20.3.2",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
@@ -57,6 +58,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.11.1",
     "react-redux": "^7.2.2",
     "regenerator-runtime": "^0.13.7",
     "socket.io": "^3.0.3",
@@ -64,12 +66,12 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@types/jest": "^26.0.15",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
