--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.11.1",
     "react-redux": "^7.2.2",
+    "react-scroll": "^1.8.2",
     "regenerator-runtime": "^0.13.7",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.1.0",
