--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
   ],
   "main": "server/index.js",
   "engines": {
-    "node": ">= 14"
+    "node": "14.x"
   },
+  "type": "module",
   "scripts": {
     "test": "jest",
     "prebuild": "rm -rf dist",
-    "build-server": "NODE_ENV=production babel server --out-dir dist --source-maps inline && cp -r server/views dist/views",
-    "build-app": "NODE_ENV=production npx webpack --mode production",
-    "build": "npm run build-app && npm run build-server",
-    "start": "NODE_ENV=production node dist/bin/slack.js",
-    "postinstall": "npm run build"
+    "build": "NODE_ENV=production npx webpack --mode production",
+    "start": "node bin/slack.js"
   },
   "repository": {
     "type": "git",
@@ -44,15 +42,18 @@
     "faker": "^5.1.0",
     "fastify": "^3.8.0",
     "fastify-formbody": "^5.0.0",
+    "fastify-jwt": "^2.4.0",
     "fastify-secure-session": "^2.3.0",
     "fastify-sensible": "^3.0.1",
+    "fastify-socket.io": "^2.0.0",
     "fastify-static": "^3.3.0",
     "formik": "^2.2.5",
+    "http-errors": "^1.8.0",
     "i18next": "^20.3.2",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
-    "node-sass": "^5.0.0",
+    "pino-pretty": "^4.8.0",
     "point-of-view": "^4.7.0",
     "pug": "^3.0.0",
     "react": "^17.0.1",
@@ -60,6 +61,7 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.11.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.2",
     "regenerator-runtime": "^0.13.7",
     "socket.io": "^3.0.3",
@@ -91,12 +93,14 @@
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.6",
+    "pages": "^0.0.16",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "prettier-stylelint": "^0.4.2",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "^11.1.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
@@ -106,6 +110,8 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.18.0",
+    "svg-url-loader": "^7.1.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
